Large update -- bug fixes, cicd changes, and features (#9)
* update docker build

* move hero enabled to gallery model

* update version

* disable create user after 1 exists

* update swagger docs

* switch port

* fix creating new sqlite db

* update docs

* update image and port

* update environment

* create version with dev start script
