# server/docs/swagger.json
@@ -1127,7 +1127,7 @@
                         "name": "payload",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserUpdate"
                         }
                     }
                 ],
@@ -1250,6 +1250,10 @@
                         }
                     ]
                 },
+                "hero_enabled": {
+                    "description": "HeroEnabled will determine if the gallery has a featured image landing page",
+                    "type": "boolean"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -1312,6 +1316,9 @@
                 },
                 "featured_image_id": {
                     "type": "integer"
+                },
+                "hero_enabled": {
+                    "type": "boolean"
                 },
                 "live": {
                     "type": "string"
@@ -1451,6 +1458,17 @@
                     "type": "string"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserUpdate": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
